[api] Stream device state events
